<resources>
    <string name="app_name">ProyectoPDMD</string>
    <string name="imagen_de_inicio">imagen de inicio</string>
    <string name="guerrero">GUERRERO</string>
    <string name="ladron">LADRON</string>
    <string name="mago">MAGO</string>
    <string name="berserker">BERSERKER</string>
    <string name="aceptar">Aceptar</string>
    <string name="elfo">ELFO</string>
    <string name="enano">ENANO</string>
    <string name="goblin">GOBLIN</string>
    <string name="humano">HUMANO</string>
    <string name="empezar_a_jugar"> Empezar a Jugar </string>
    <string name="ingrese_su_nombre">Introduzca el nombre de tu jugador</string>
    <string name="hasta_ahora_has_seleccionado_los_siguientes_atributos_para_tu_personaje">Hasta ahora, has seleccionado los siguientes atributos para tu personaje</string>
    <string name="Asignar">Asignar</string>
    <string name="entrar">ENTRAR</string>
    <string name="Continuar">CONTINUAR</string>
    <string name="placeholder">Ingresa tu mensaje</string>
    <string name="audio_no_se_entiende">El audio que me has enviado es innaudible o no se entiende</string>
    <string name="ingresa_mensaje">Por favor, ingresa un mensaje</string>
    <string name="mensajedevoz">Di algo al microfono...</string>
    <string name="mensajedevoznoadmitido">Mensaje de voz erróneo o no admitido</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>