<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EligeclaseActivity"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="335dp"
        android:layout_height="289dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="38dp"
        android:contentDescription="@string/imagen_de_inicio"
        app:layout_constraintBottom_toTopOf="@+id/BtnGuerrero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/inicio"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/BtnGuerrero"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="@null"
        android:fontFamily="times"
        android:gravity="center"
        android:shadowColor="#786D6D"
        android:text="@string/guerrero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMago"
        app:layout_constraintEnd_toStartOf="@+id/btnLadron"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnLadron"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@null"
        android:fontFamily="times"
        android:gravity="center"
        android:text="@string/ladron"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BtnGuerrero"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnMago"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@null"
        android:gravity="center"
        android:text="@string/mago"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAceptar"
        app:layout_constraintEnd_toStartOf="@+id/berserker"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/berserker"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@null"
        android:fontFamily="times"
        android:gravity="center"
        android:text="@string/berserker"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMago"
        app:layout_constraintTop_toBottomOf="@+id/btnLadron" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="times"
        android:gravity="center"
        android:text="@string/aceptar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/berserker" />

</androidx.constraintlayout.widget.ConstraintLayout>